--- a/index.html
+++ b/index.html
@@ -1,262 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- css -->
-    <link rel="stylesheet" href="style.css" />
-    <!-- icon -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Mulish:wght@500;600;700&family=Roboto:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@200;300;400&display=swap"
-      rel="stylesheet"
-    />
-    <title>portfolio</title>
-  </head>
 
-  <body>
-    <!-- navbar start -->
-    <nav id="navbar">
-      <div class="navbar_img">
-        <img src="my_photo.jpg" alt="" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- css -->
+  <link rel="stylesheet" href="style.css" />
+  <!-- icon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Mulish:wght@500;600;700&family=Roboto:wght@300;400;500&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@200;300;400&display=swap"
+    rel="stylesheet" />
+  <title>portfolio</title>
+</head>
+
+<body>
+  <!-- navbar start -->
+  <nav id="navbar">
+    <div class="navbar_img">
+      <img src="my_photo.jpg" alt="" />
+    </div>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <ul>
+      <li class="items">
+        <a class="links activee" href="#section_about">ABOUT</a>
+      </li>
+      <li class="items">
+        <a class="links" href="#section_experience">EXPERIENCE</a>
+      </li>
+      <li class="items">
+        <a class="links" href="#section_education">EDUCATION</a>
+      </li>
+      <li class="items">
+        <a class="links" href="#section_skills">SKILLS</a>
+      </li>
+      <li class="items">
+        <a class="links" href="#section_interests">INTERESTS</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- navbar end -->
+  <main>
+    <!-- section_about start -->
+    <section id="section_about">
+      <div class="section_about_content">
+        <h1>CƏFƏRZADƏ</h1>
+        <p class="adress">
+          Lənkəran şəhəri, ləj kəndi
+          <span><a href="mailto:kubraceferzade30@gmail.com" target="_blank">kubraceferzade30@gmail.com</a></span>
+        </p>
+        <p class="about">
+          front-end proqramlaşdırma üzrə inkişaf edirəm. Bu sahədə təcrübəçi
+          olaraq çalışıram.
+        </p>
       </div>
-      <div class="hamburger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+      <div class="section_about_icon">
+        <div class="icon">
+          <a href="https://www.linkedin.com/in/k%C3%BCbrac%C9%99f%C9%99rzad%C9%99/" target="_blank"><i
+              class="fa-brands fa-linkedin-in"></i></a>
+        </div>
+
+        <div class="icon">
+          <a href="https://github.com/kubrajafar" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </div>
+        <div class="icon">
+          <a href="https://www.instagram.com/kubra_ceferzade/" target="_blank"><i
+              class="fa-brands fa-instagram"></i></a>
+        </div>
+
+        <div class="icon">
+          <a href="https://www.facebook.com/CeferzadeKubra/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+        </div>
       </div>
-      <ul>
-        <li class="items">
-          <a class="links activee" href="#section_about">ABOUT</a>
-        </li>
-        <li class="items">
-          <a class="links" href="#section_experience">EXPERIENCE</a>
-        </li>
-        <li class="items">
-          <a class="links" href="#section_education">EDUCATION</a>
-        </li>
-        <li class="items">
-          <a class="links" href="#section_skills">SKILLS</a>
-        </li>
-        <li class="items">
-          <a class="links" href="#section_interests">INTERESTS</a>
-        </li>
-      </ul>
-    </nav>
-    <!-- navbar end -->
-    <main>
-      <!-- section_about start -->
-      <section id="section_about">
-        <div class="section_about_content">
-          <h1>CƏFƏRZADƏ</h1>
-          <p class="adress">
-            Lənkəran şəhəri, ləj kəndi
-            <span
-              ><a href="mailto:kubraceferzade30@gmail.com" target="_blank"
-                >kubraceferzade30@gmail.com</a
-              ></span
-            >
-          </p>
-          <p class="about">
-            front-end proqramlaşdırma üzrə inkişaf edirəm. Bu sahədə təcrübəçi
-            olaraq çalışıram.
-          </p>
-        </div>
-        <div class="section_about_icon">
-          <div class="icon">
-            <a
-              href="https://www.linkedin.com/in/k%C3%BCbrac%C9%99f%C9%99rzad%C9%99/"
-              target="_blank"
-              ><i class="fa-brands fa-linkedin-in"></i
-            ></a>
-          </div>
+    </section>
+    <hr />
 
-          <div class="icon">
-            <a href="https://github.com/kubrajafar" target="_blank"
-              ><i class="fa-brands fa-github"></i
-            ></a>
-          </div>
-          <div class="icon">
-            <a href="https://www.instagram.com/kubra_ceferzade/" target="_blank"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-          </div>
+    <!-- section_about end -->
 
-          <div class="icon">
-            <a href="https://www.facebook.com/CeferzadeKubra/" target="_blank"
-              ><i class="fa-brands fa-facebook-f"></i
-            ></a>
-          </div>
-        </div>
-      </section>
-      <hr />
-
-      <!-- section_about end -->
-
-      <!-- section_experience start -->
-      <section id="section_experience">
-        <h2>EXPERIENCE</h2>
+    <!-- section_experience start -->
+    <section id="section_experience">
+      <h2>EXPERIENCE</h2>
+      <div class="experience">
         <div class="angle_right">
           <i class="fa-solid fa-angle-right"></i>
           <p class="section_experience_skill">JUNIOR WEB DEVELOPER</p>
         </div>
 
         <p>
-          Diqqəti və məntiqi işə salaraq böyük naliyyətlər əldə etmək mümkündür.
-          Ən əsası çox çalışmaq uğura aparacaq.
+          2021 - 2022
         </p>
-      </section>
-      <hr />
-      <!-- section_experience end -->
-
-      <!-- section_education start -->
-      <section id="section_education">
-        <h2 class="section_education_header">EDUCATION</h2>
-        <div class="section_education_content">
-          <div>
-            <div class="angle_right">
-              <i class="fa-solid fa-angle-right"></i>
-              <h2 class="section_education_name">LANKARAN STATE UNIVERSITY</h2>
-            </div>
-            <h3>BACHELOR OF SCIENCE</h3>
-            <p class="section_education_profession">
-              Mathematics and Informatics Teacher
-            </p>
-          </div>
-          <div class="history">
-            <p>August 2018 - May 2023</p>
-          </div>
+      </div>
+      <div class="experience">
+        <div class="angle_right">
+          <i class="fa-solid fa-angle-right"></i>
+          <p class="section_experience_skill">Front-end Teacher</p>
         </div>
-        <div class="section_education_content">
-          <div>
-            <div class="angle_right">
-              <i class="fa-solid fa-angle-right"></i>
-              <h2 class="section_education_name">CODE ACADEMY</h2>
-            </div>
-            <h3>Practice</h3>
-            <p class="section_education_profession">Web Developer</p>
-          </div>
-          <div class="history">
-            <p>February 2023 - May 2023</p>
-          </div>
-        </div>
-      </section>
-      <hr />
-      <!-- section_education end -->
+        <p>
+          2023 - currently
+        </p>
 
-      <!-- section_sxills start -->
-      <section id="section_skills">
-        <h2 class="section_skills_header">SKILLS</h2>
-        <h3>PROGRAMMING LANGUAGES & TOOLS</h3>
-        <div class="section_skills_icons">
-          <div class="skills">
-            <div><i class="fa-brands fa-html5"></i></div>
-            <div class="tip">100%</div>
+      </div>
+    </section>
+    <hr />
+    <!-- section_experience end -->
+
+    <!-- section_education start -->
+    <section id="section_education">
+      <h2 class="section_education_header">EDUCATION</h2>
+      <div class="section_education_content">
+        <div>
+          <div class="angle_right">
+            <i class="fa-solid fa-angle-right"></i>
+            <h2 class="section_education_name">LANKARAN STATE UNIVERSITY</h2>
+          </div>
+          <h3>BACHELOR OF SCIENCE</h3>
+          <p class="section_education_profession">
+            Mathematics and Informatics Teacher
+          </p>
+        </div>
+        <div class="history">
+          <p>August 2018 - May 2023</p>
+        </div>
+      </div>
+      <div class="section_education_content">
+        <div>
+          <div class="angle_right">
+            <i class="fa-solid fa-angle-right"></i>
+            <h2 class="section_education_name">CODE ACADEMY</h2>
+          </div>
+          <h3>Practice</h3>
+          <p class="section_education_profession">Web Developer</p>
+        </div>
+        <div class="history">
+          <p>February 2023 - May 2023</p>
+        </div>
+      </div>
+    </section>
+    <hr />
+    <!-- section_education end -->
+
+    <!-- section_sxills start -->
+    <section id="section_skills">
+      <h2 class="section_skills_header">SKILLS</h2>
+      <h3>PROGRAMMING LANGUAGES & TOOLS</h3>
+      <div class="section_skills_icons">
+        <div class="skills">
+          <div><i class="fa-brands fa-html5"></i></div>
+          <!-- <div class="tip">100%</div>
             <div class="skills_percent">
               <div class="fill fill_html"></div>
-            </div>
-          </div>
+            </div> -->
+        </div>
 
-          <div class="skills">
-            <div><i class="fa-brands fa-css3-alt"></i></div>
-            <div class="tip">80%</div>
+        <div class="skills">
+          <div><i class="fa-brands fa-css3-alt"></i></div>
+          <!-- <div class="tip">80%</div>
             <div class="skills_percent">
               <div class="fill fill_css"></div>
-            </div>
-          </div>
+            </div> -->
+        </div>
+        <div class="skills">
+          <div><i class="fa-brands fa-sass"></i></div>
+        </div>
 
-          <div class="skills">
-            <div><i class="fa-brands fa-square-js"></i></div>
-            <div class="tip">60%</div>
+        <div class="skills">
+          <div><i class="fa-brands fa-square-js"></i></div>
+          <!-- <div class="tip">60%</div>
             <div class="skills_percent">
               <div class="fill fill_js"></div>
-            </div>
-          </div>
-
-          <div class="skills">
-            <div><i class="fa-brands fa-python"></i></div>
-            <div class="tip">70%</div>
-            <div class="skills_percent">
-              <div class="fill fill_py"></div>
-            </div>
-          </div>
-
-          <div class="skills">
-            <div><i class="fa-brands fa-react"></i></div>
-            <div class="tip">50%</div>
-            <div class="skills_percent">
-              <div class="fill fill_react"></div>
-            </div>
-          </div>
-
-          <div class="skills">
-            <div><i class="fa-brands fa-wordpress"></i></div>
-            <div class="tip">55%</div>
-            <div class="skills_percent">
-              <div class="fill fill_wp"></div>
-            </div>
-          </div>
+            </div> -->
         </div>
-      </section>
-      <hr />
-      <!-- section_sxills end -->
 
-      <!-- section_interests start -->
-      <section id="section_interests">
-        <h2 class="section_interests_header">INTERESTS</h2>
-        <p class="section_interests_content">
-          Veb proqramçı olmaqdan başqa vaxtımın çox hissəsini kitab oxumaqla
-          keçirməyi sevirəm. əsasən vaxt olduqda incəsəntlə məşğul oluram.
-          <br /><br />
-          Bəzən filimlər izləyirəm. digər boş vaxtlarımı veb texnologiyaları,
-          təbiəti, maraqlandığım mövzuları araşdırmaqla məşğul oluram.
-        </p>
 
-      </section>
-      <!-- section_interests end -->
-    </main>
-    <script>
-      hamburger = document.querySelector(".hamburger");
+        <div class="skills">
+          <div><i class="fa-brands fa-react"></i></div>
+          <!-- <div class="tip">50%</div>
+              <div class="skills_percent">
+                <div class="fill fill_react"></div>
+              </div> -->
+        </div>
 
-      hamburger.onclick = function () {
-        navBar = document.querySelector("#navbar");
-        navBar.classList.toggle("active");
-      };
+        <div class="skills">
+          <div><i class="fa-brands fa-python"></i></div>
+          <!-- <div class="tip">70%</div>
+              <div class="skills_percent">
+                <div class="fill fill_py"></div>
+              </div> -->
+        </div>
 
-      const links = document.querySelectorAll(".links");
-      const section = document.querySelectorAll("section");
-      window.onscroll = function () {
-        var current = "home";
-        section.forEach((section) => {
-          const sectionTop = section.offsetTop;
-          if (pageYOffset >= sectionTop - 100) {
-            current = section.getAttribute("id");
-          }
-        });
 
-        links.forEach((item) => {
+        <div class="skills">
+          <div><i class="fa-brands fa-node"></i></div>
+        </div>
+        <div class="skills">
+          <div><i class="fa-brands fa-square-git"></i></div>
+        </div>
+        <div class="skills">
+          <div><i class="fa-brands fa-github"></i></div>
+        </div>
+
+
+      </div>
+    </section>
+    <hr />
+    <!-- section_sxills end -->
+
+    <!-- section_interests start -->
+    <section id="section_interests">
+      <h2 class="section_interests_header">INTERESTS</h2>
+      <p class="section_interests_content">
+        Veb proqramçı olmaqdan başqa vaxtımın çox hissəsini kitab oxumaqla
+        keçirməyi sevirəm. əsasən vaxt olduqda incəsəntlə məşğul oluram.
+        <br /><br />
+        Bəzən filimlər izləyirəm. digər boş vaxtlarımı veb texnologiyaları,
+        təbiəti, maraqlandığım mövzuları araşdırmaqla məşğul oluram.
+      </p>
+
+    </section>
+    <!-- section_interests end -->
+  </main>
+  <script>
+    hamburger = document.querySelector(".hamburger");
+
+    hamburger.onclick = function () {
+      navBar = document.querySelector("#navbar");
+      navBar.classList.toggle("active");
+    };
+
+    const links = document.querySelectorAll(".links");
+    const section = document.querySelectorAll("section");
+    window.onscroll = function () {
+      var current = "home";
+      section.forEach((section) => {
+        const sectionTop = section.offsetTop;
+        if (pageYOffset >= sectionTop - 100) {
+          current = section.getAttribute("id");
+        }
+      });
+
+      links.forEach((item) => {
+        item.classList.remove("activee");
+        if (item.href.includes(current)) {
+          item.classList.add("activee");
+        } else {
           item.classList.remove("activee");
-          if (item.href.includes(current)) {
-            item.classList.add("activee");
-          } else {
-            item.classList.remove("activee");
-          }
-        });
-      };
-    </script>
-  </body>
+        }
+      });
+    };
+  </script>
+</body>
+
 </html>
